Fix: not working

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
 
   <body>
-    <medium-portfolio username="mariusbongarts11"></medium-portfolio>
+    <medium-portfolio username="jaredabrock"></medium-portfolio>
   </body>
 </html>
