bare min working

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
 
   <body>
+<!--
     <medium-portfolio username="mariusbongarts11"></medium-portfolio>
+-->
+<hello-world message="Dillan"></hello-world>
+
+
   </body>
 </html>
