--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
   </head>
 
   <body>
+
+<!--
     <medium-portfolio username="jaredabrock"></medium-portfolio>
+-->
+
+    <hello-world message="Dillan"></hello-world>
 
 
   </body>
